...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txtDiscountType"
                app:layout_constraintStart_toStartOf="@+id/txtDiscountType"
                app:layout_constraintTop_toBottomOf="@+id/editDiscountType" />

            <EditText
                android:id="@+id/editDiscountAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="end"
                android:hint="0.0"
                android:inputType="number"
...
